<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/action_about"-->
<!--        android:title="About"-->
<!--        android:icon="@drawable/ic_info"-->
<!--        app:showAsAction="always"/>-->

    <item
        android:id="@+id/action_favorite"
        android:title="Favorite"
        android:icon="@drawable/ic_favorite_white"
        app:showAsAction="always"/>

</menu>